Rewrote visibility reducers: toggling only old active with new active Some style fix in component  Changes to be committed: 	modified:   client/src/js/components/Chat/index.js 	modified:   client/src/js/components/People/index.js 	modified:   client/src/js/components/SideMenu.js 	modified:   client/src/js/components/VideoCamera.js 	modified:   client/src/js/constants/visibility.js 	modified:   client/src/js/reducers/visibility.js 	modified:   client/src/js/states/visibility.js 	modified:   client/src/stylus/assets/components/sideMenu.styl

--- a/client/src/stylus/assets/components/sideMenu.styl
+++ b/client/src/stylus/assets/components/sideMenu.styl
@@ -5,7 +5,6 @@
   position absolute
   top 0
   left 0
-  height 100%
   border-right 1px solid main_middle_dark_grey_color
   box-shadow 0px -7px 15px 0 main_middle_dark_grey_color
 
@@ -47,4 +46,3 @@
           border none
           color main_cyan_color
           box-shadow none
-
